# asciiquarium-rust

./: Cargo.toml  Dockerfile  WEB_VIEWER_README.md
assets/: index.html
examples/: egui_demo.rs
src/widgets/: asciiquarium.rs  asciiquarium_assets.rs  generated_fish_assets.rs
