[package]
name = "asciiquarium-rust"
version = "0.1.0" # release
edition = "2021"
description = "Asciiquarium widget and utilities for egui"
# license = ""  # Set an appropriate license for your project if desired
# repository = ""

[lib]
name = "asciiquarium_rust"
path = "src/lib.rs"

[dependencies]
egui = "0.33.3"
once_cell = "1.18"

[dev-dependencies]
eframe = "0.33.3"
rand = "0.10"
